# VintedScrapV3

./: .gitignore  PATCHNOTE.md  README.md  installer.bat  lancer.bat  main.py  requirements.txt
core/: __init__.py  analyzer.py  auth.py  comparateur_prix.py  data.py  discord_alerts.py  market_insights.py  plugin_api.py  plugin_base.py  plugin_manager.py  plugin_security.py  recommandations.py  resell.py  scraper.py  ui_utils.py  user_profile.py
data/: historique.json  historique_recherches.json  parametres.json  plugins_registry.json
data/plugins/discord_notify/: config.json
docs/: AUDIT_2026-04-14.md  GITHUB_PUBLICATION.md
plugins/discord_notify/: manifest.json  plugin.py
vnext/: README.md  pyproject.toml
vnext/src/vintedscrap_vnext/: __init__.py  app.py  config.py  models.py  profile_service.py  relevance.py  repositories.py
vnext/tests/: test_relevance.py
