[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vintedscrap-vnext"
version = "0.1.0"
description = "Nouvelle base propre pour VintedScrap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
